--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
 </main>
 <footer id="footer">
 	<div >
-		<a id="profile-link" href="#" target="_blank"><img src="img/fb.png" width="150px"></a>
+		<a id="profile-link" href="https://www.facebook.com/mabuchi.kun.562" target="_blank"><img src="img/fb.png" width="150px"></a>
 		<p>Facebook profile</p>
 	</div>
 	<div>
-		<a href="#" target="_blank"><img src="img/ig.png" width="150px"></a>
+		<a href="https://instagram.com/_spidermine2?ishid=YmMyMTA2M2Y=" target="_blank"><img src="img/ig.png" width="150px"></a>
 		<p>Instagram profile</p>
 	</div>
 	<div>
-		<a href="#" target="_blank"><img src="img/pin.png" width="220px"></a>
+		<a href="https://pin.it/5Mti3Uy" target="_blank"><img src="img/pin.png" width="220px"></a>
 		<p>Pinterest profile</p>
 	</div>
 	<div>
-		<a href="#" target="_blank"><img src="img/in.png" width="175px"></a>
-		<p>LinkedIn profile</p>
+		<a href="whatsapp://send?text=Hello&phone=+6283148175200" target="_blank"><img src="img/logowa.png" width="175px"></a>
+		<p>WhatsApp</p>
 	</div>
 </footer>
 <script type="text/javascript">
