--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 <body>
 <nav id="navbar">
 	<a href="#welcome-section">ABOUT</a>
-	<a href="#main">PROJECTS</a>
+	<a href="#main">GALERY</a>
 	<a href="#footer">CONTACT</a>
 </nav>
 <header id="welcome-section">
+	<div class="project-tile">
+		<a href="#" target="_blank"><img src="img/fotoifat.jpg" width="220px"></a>
 	<h1>Hallo saya Sarifat Nur'aeni</h1>
 	<p>Saya seorang pelajar</p>
 	<p>Sekolah : SMK Negeri 4 Kuningan</p>
@@ -19,16 +21,16 @@
 </header>
 <main id="main">
     <div class="sapat">
-        <h1>My galery</h1>
+        <h1>GALERY</h1>
     </div>
 	<section id="projects">
 		<div class="project-tile">
 		<a href="#" target="_blank"><img src="img/img1.jpg"></a>
-			<div>husbu</div>
+			<div>Husbu</div>
 		</div>
 		<div class="project-tile">
-		<a href="#" target="_blank"><img src="img/img2.jpg"></a>
-			<div>Sekolah</div>
+		<a href="#" target="_blank"><img src="img/yoaimo.jpg"></a>
+			<div>Yoaimo</div>
 		</div>
 		<div class="project-tile">
 		<a href="#" target="_blank"><img src="img/img3.jpg"></a>
